Fix background of progress bar not showing

--- a/src/styles/scss/_statusbar.scss
+++ b/src/styles/scss/_statusbar.scss
@@ -90,7 +90,7 @@
 
   .h5p-digibook-status-progressbar-back {
     width: 100%;
-    background-color: $base-color;
+    background-color: rgba($base-color, 0.2);
     background-size: cover;
   }
 
